--- a/washer-parts.html
+++ b/washer-parts.html
@@ -721,20 +721,41 @@
                     </div>
 
                 </div>
-
-                <!-- Compatibility Note -->
-                <div class="max-w-4xl mx-auto mt-20 text-center">
-                    <p class="text-gray-400 text-lg leading-relaxed">
-                        Not sure if a part fits your washer model?
-                        Our specialists can help you confirm compatibility before ordering,
-                        ensuring the right fit the first time.
-                    </p>
-                </div>
-
             </div>
         </section>
 
+        <!-- CALL TO ACTION -->
+        <section class="relative  text-white md:py-28 md:pt-10 py-16 pt-4 overflow-hidden">
+            <div class="relative max-w-7xl mx-auto md:px-6 px-4">
+                <div data-aos="fade-up"
+                    class="bg-white/5 border border-white/10 backdrop-blur-2xl rounded-3xl p-14 md:px-14 px-5 text-center">
 
+                    <h2 class="text-4xl md:text-5xl font-extrabold leading-tight">
+                        Need Help Finding the <span class="text-[#ffb400]">Right Part?</span>
+                    </h2>
+
+                    <p class="text-gray-400 text-lg max-w-2xl mx-auto mt-6">
+                        Our appliance experts are ready to guide you. Get fast answers, accurate compatibility checks,
+                        and dependable solutions — all in one place.
+                    </p>
+
+                    <div class="flex flex-wrap justify-center gap-6 mt-10">
+                        <a href="contact.html"
+                            class="inline-flex items-center gap-3 px-10 py-4 rounded-full bg-[#ffb400] text-black font-semibold hover:bg-[#e6a200] transition">
+                            Contact Our Experts
+                            <i class="fa-solid fa-arrow-up-right-from-square"></i>
+                        </a>
+
+                        <a href="about.html"
+                            class="inline-flex items-center gap-3 px-10 py-4 rounded-full border border-white/20 text-white hover:border-[#ffb400] hover:text-[#ffb400] transition">
+                            Learn More About Us
+                        </a>
+                    </div>
+
+                </div>
+            </div>
+
+        </section>
     </main>
 
 
