--- a/oven-parts.html
+++ b/oven-parts.html
@@ -102,7 +102,7 @@
         <!-- OVEN PARTS HERO -->
         <div class="relative z-10 min-h-[85vh] flex items-center justify-center">
 
-            <div class="max-w-6xl mx-auto px-6 text-center">
+            <div class="max-w-6xl mx-auto px-6 text-center md:py-28 py-16">
 
                 <span
                     class="inline-flex items-center px-6 py-2 rounded-full bg-white/5 border border-white/10 text-[#ffb400] font-semibold text-sm tracking-wide">
@@ -162,11 +162,11 @@
 
 
         <!-- OVEN PARTS CATEGORIES -->
-        <div id="oven-categories" class="relative z-10 py-40">
+        <div id="oven-categories" class="relative z-10 md:py-28 py-16 md:pt-10">
 
             <div class="max-w-7xl mx-auto px-6">
 
-                <div class="max-w-4xl mx-auto text-center mb-32">
+                <div class="max-w-4xl mx-auto text-center md:mb-20 mb-10">
                     <span
                         class="inline-flex px-5 py-2 rounded-full bg-white/5 border border-white/10 text-[#ffb400] font-semibold text-sm">
                         Oven Components
@@ -183,7 +183,7 @@
                     </p>
                 </div>
 
-                <div class="grid grid-cols-1 sm:grid-cols-2 xl:grid-cols-3 gap-16">
+                <div class="grid grid-cols-1 sm:grid-cols-2 xl:grid-cols-3 md:gap-10 gap-4">
 
                     <div class="bg-white/5 border border-white/10 rounded-3xl p-12">
                         <h3 class="text-2xl font-bold">Heating Elements</h3>
@@ -241,11 +241,11 @@
 
 
         <!-- COMMON OVEN PROBLEMS & SOLUTIONS -->
-        <div class="relative z-10 py-40">
+        <div class="relative z-10 md:py-28 py-16 md:pt-10">
 
             <div class="max-w-7xl mx-auto px-6">
 
-                <div class="max-w-4xl mx-auto text-center mb-32">
+                <div class="max-w-4xl mx-auto text-center md:mb-20 mb-10">
                     <span
                         class="inline-flex px-5 py-2 rounded-full bg-white/5 border border-white/10 text-[#ffb400] font-semibold text-sm">
                         Troubleshooting
@@ -262,7 +262,7 @@
                     </p>
                 </div>
 
-                <div class="grid grid-cols-1 lg:grid-cols-2 gap-20">
+                <div class="grid grid-cols-1 lg:grid-cols-2 md:gap-10 gap-4">
 
                     <div class="bg-white/5 border border-white/10 rounded-3xl p-12">
                         <h3 class="text-2xl font-bold">Oven Not Heating Properly</h3>
@@ -340,11 +340,11 @@
 
 
         <!-- WHY CHOOSE OUR OVEN PARTS -->
-        <div class="relative z-10 py-40">
+        <div class="relative z-10 md:py-28 py-16 md:pt-10">
 
             <div class="max-w-7xl mx-auto px-6">
 
-                <div class="max-w-4xl mx-auto text-center mb-32">
+                <div class="max-w-4xl mx-auto text-center md:mb-20 mb-10">
                     <span
                         class="inline-flex px-5 py-2 rounded-full bg-white/5 border border-white/10 text-[#ffb400] font-semibold text-sm">
                         Why Choose Us
@@ -361,7 +361,7 @@
                     </p>
                 </div>
 
-                <div class="grid grid-cols-1 md:grid-cols-2 xl:grid-cols-3 gap-16">
+                <div class="grid grid-cols-1 md:grid-cols-2 xl:grid-cols-3 md:gap-10 gap-4">
 
                     <div class="bg-white/5 border border-white/10 rounded-3xl p-12">
                         <h3 class="text-2xl font-bold">Precision Temperature Control</h3>
@@ -419,11 +419,11 @@
 
 
         <!-- COMPATIBLE OVEN BRANDS -->
-        <div class="relative z-10 py-40">
+        <div class="relative z-10 md:py-28 py-16 md:pt-10">
 
             <div class="max-w-7xl mx-auto px-6">
 
-                <div class="max-w-4xl mx-auto text-center mb-32">
+                <div class="max-w-4xl mx-auto text-center md:mb-20 mb-10">
                     <span
                         class="inline-flex px-5 py-2 rounded-full bg-white/5 border border-white/10 text-[#ffb400] font-semibold text-sm">
                         Compatibility
@@ -439,7 +439,7 @@
                     </p>
                 </div>
 
-                <div class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-5 gap-10 text-center">
+                <div class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-5 md:gap-10 gap-3 text-center">
 
                     <div class="bg-white/5 border border-white/10 rounded-2xl py-8 font-semibold">Whirlpool</div>
                     <div class="bg-white/5 border border-white/10 rounded-2xl py-8 font-semibold">GE</div>
@@ -455,17 +455,42 @@
 
                 </div>
 
-                <div class="max-w-4xl mx-auto mt-24 text-center">
-                    <p class="text-gray-400 text-lg leading-relaxed">
-                        If your oven brand or model isn’t listed above,
-                        our specialists can help confirm compatibility before you order.
-                    </p>
-                </div>
-
             </div>
 
         </div>
 
+                <!-- CALL TO ACTION -->
+        <section class="relative  text-white md:py-28 md:pt-10 py-16 pt-4 overflow-hidden">
+            <div class="relative max-w-7xl mx-auto md:px-6 px-4">
+                <div data-aos="fade-up"
+                    class="bg-white/5 border border-white/10 backdrop-blur-2xl rounded-3xl p-14 md:px-14 px-5 text-center">
+
+                    <h2 class="text-4xl md:text-5xl font-extrabold leading-tight">
+                        Need Help Finding the <span class="text-[#ffb400]">Right Part?</span>
+                    </h2>
+
+                    <p class="text-gray-400 text-lg max-w-2xl mx-auto mt-6">
+                        Our appliance experts are ready to guide you. Get fast answers, accurate compatibility checks,
+                        and dependable solutions — all in one place.
+                    </p>
+
+                    <div class="flex flex-wrap justify-center gap-6 mt-10">
+                        <a href="contact.html"
+                            class="inline-flex items-center gap-3 px-10 py-4 rounded-full bg-[#ffb400] text-black font-semibold hover:bg-[#e6a200] transition">
+                            Contact Our Experts
+                            <i class="fa-solid fa-arrow-up-right-from-square"></i>
+                        </a>
+
+                        <a href="about.html"
+                            class="inline-flex items-center gap-3 px-10 py-4 rounded-full border border-white/20 text-white hover:border-[#ffb400] hover:text-[#ffb400] transition">
+                            Learn More About Us
+                        </a>
+                    </div>
+
+                </div>
+            </div>
+
+        </section>
 
 
     </main>
