--- a/index.html
+++ b/index.html
@@ -103,7 +103,8 @@
                 <div class="absolute bottom-0 left-1/4 w-[400px] h-[400px] bg-[#ffb400]/10 rounded-full blur-3xl"></div>
             </div>
 
-            <div class="relative max-w-7xl mx-auto px-6 md:py-28 py-16 grid grid-cols-1 lg:grid-cols-2 gap-16 items-center">
+            <div
+                class="relative max-w-7xl mx-auto px-6 md:py-28 py-16 grid grid-cols-1 lg:grid-cols-2 gap-16 items-center">
 
                 <div data-aos="fade-up" class="space-y-7">
                     <p class="bg-white/40  p-1.5 text-sm rounded-full inline-flex px-5">Los Angeles Appliance</p>
@@ -132,21 +133,59 @@
                             Get Support
                         </a>
                     </div>
+                    <!-- BRANDS GLASS CHIPS -->
+                    <div class="pt-6">
+                        <p class="text-sm uppercase tracking-widest text-gray-400 mb-6">
+                            Compatible With Leading Brands
+                        </p>
 
-                    <div class="grid grid-cols-3 gap-6 pt-10 max-w-lg">
-                        <div class="flex flex-col items-start gap-2">
-                            <span class="text-3xl font-bold text-[#ffb400]">10k+</span>
-                            <span class="text-sm text-gray-400">Parts Available</span>
-                        </div>
-                        <div class="flex flex-col items-start gap-2">
-                            <span class="text-3xl font-bold text-[#ffb400]">15+</span>
-                            <span class="text-sm text-gray-400">Years Experience</span>
-                        </div>
-                        <div class="flex flex-col items-start gap-2">
-                            <span class="text-3xl font-bold text-[#ffb400]">24/7</span>
-                            <span class="text-sm text-gray-400">Customer Help</span>
+                        <div class="md:flex grid grid-cols-2 flex-wrap items-center md:gap-5 gap-2">
+
+                            <span class="px-6 py-3 rounded-xl bg-white/5 backdrop-blur-xl border border-white/10 
+                   text-white/80 font-semibold hover:text-[#ffb400] hover:border-[#ffb400]/40 
+                   transition">
+                                Whirlpool
+                            </span>
+
+                            <span class="px-6 py-3 rounded-xl bg-white/5 backdrop-blur-xl border border-white/10 
+                   text-white/80 font-semibold hover:text-[#ffb400] hover:border-[#ffb400]/40 
+                   transition">
+                                LG
+                            </span>
+
+                            <span class="px-6 py-3 rounded-xl bg-white/5 backdrop-blur-xl border border-white/10 
+                   text-white/80 font-semibold hover:text-[#ffb400] hover:border-[#ffb400]/40 
+                   transition">
+                                Samsung
+                            </span>
+
+                            <span class="px-6 py-3 rounded-xl bg-white/5 backdrop-blur-xl border border-white/10 
+                   text-white/80 font-semibold hover:text-[#ffb400] hover:border-[#ffb400]/40 
+                   transition">
+                                GE
+                            </span>
+
+                            <span class="px-6 py-3 rounded-xl bg-white/5 backdrop-blur-xl border border-white/10 
+                   text-white/80 font-semibold hover:text-[#ffb400] hover:border-[#ffb400]/40 
+                   transition">
+                                Bosch
+                            </span>
+
+                            <span class="px-6 py-3 rounded-xl bg-white/5 backdrop-blur-xl border border-white/10 
+                   text-white/80 font-semibold hover:text-[#ffb400] hover:border-[#ffb400]/40 
+                   transition">
+                                Frigidaire
+                            </span>
+
+                            <span class="px-6 py-3 col-span-2 rounded-xl bg-white/5 backdrop-blur-xl border border-white/10 
+                   text-white/80 font-semibold hover:text-[#ffb400] hover:border-[#ffb400]/40 
+                   transition">
+                                KitchenAid
+                            </span>
+
                         </div>
                     </div>
+
                 </div>
 
                 <div data-aos="zoom-in" class="relative">
@@ -155,8 +194,8 @@
                     </div>
 
                     <div class="relative bg-white/5 backdrop-blur-xl border border-white/10 rounded-3xl p-3 shadow-2xl">
-                        <img src="https://images.unsplash.com/photo-1616593918824-4fef16054381?q=80&w=880&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Appliance Parts"
-                            class="rounded-2xl object-cover w-full h-[420px] md:h-[40rem]" />
+                        <img src="https://images.unsplash.com/photo-1616593918824-4fef16054381?q=80&w=880&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                            alt="Appliance Parts" class="rounded-2xl object-cover w-full h-[420px] md:h-[43rem]" />
                     </div>
                 </div>
 
@@ -270,8 +309,7 @@
 
 
         <!-- WHY CHOOSE US -->
-        <section
-            class="relative text-white md:py-28 py-16">
+        <section class="relative text-white md:py-28 py-16">
 
             <div class="absolute inset-0">
                 <div class="absolute top-0 left-1/3 w-[420px] h-[420px] bg-[#ffb400]/15 rounded-full blur-3xl"></div>
@@ -297,7 +335,8 @@
                         <div class="space-y-6">
 
                             <div class="flex gap-5 items-start">
-                                <div class="w-14 h-14 shrink-0 rounded-xl bg-[#ffb400]/20 flex items-center justify-center">
+                                <div
+                                    class="w-14 h-14 shrink-0 rounded-xl bg-[#ffb400]/20 flex items-center justify-center">
                                     <i class="fa-solid fa-shield-halved text-[#ffb400] text-xl"></i>
                                 </div>
                                 <div>
@@ -309,7 +348,8 @@
                             </div>
 
                             <div class="flex gap-5 items-start">
-                                <div class="w-14 h-14 shrink-0 rounded-xl bg-[#ffb400]/20 flex items-center justify-center">
+                                <div
+                                    class="w-14 h-14 shrink-0 rounded-xl bg-[#ffb400]/20 flex items-center justify-center">
                                     <i class="fa-solid fa-truck-fast text-[#ffb400] text-xl"></i>
                                 </div>
                                 <div>
@@ -321,7 +361,8 @@
                             </div>
 
                             <div class="flex gap-5 items-start">
-                                <div class="w-14 h-14 shrink-0 rounded-xl bg-[#ffb400]/20 flex items-center justify-center">
+                                <div
+                                    class="w-14 h-14 shrink-0 rounded-xl bg-[#ffb400]/20 flex items-center justify-center">
                                     <i class="fa-solid fa-headset text-[#ffb400] text-xl"></i>
                                 </div>
                                 <div>
@@ -342,7 +383,8 @@
 
                         <div class="relative bg-white/5 border border-white/10 backdrop-blur-xl rounded-3xl p-3">
                             <img src="https://images.unsplash.com/photo-1560185007-cde436f6a4d0?q=80&w=1170&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-                                alt="Appliance repair professional" class="rounded-2xl object-cover w-full h-[420px] md:h-[40rem]" />
+                                alt="Appliance repair professional"
+                                class="rounded-2xl object-cover w-full h-[420px] md:h-[40rem]" />
                         </div>
                     </div>
 
@@ -461,7 +503,8 @@
                     <div data-aos="zoom-in"
                         class="bg-white/5 border border-white/10 backdrop-blur rounded-3xl p-8 hover:border-[#ffb400]/40 transition">
                         <div class="flex items-center gap-4 mb-6">
-                            <div class="w-14 h-14 shrink-0 rounded-full bg-[#ffb400]/20 flex items-center justify-center">
+                            <div
+                                class="w-14 h-14 shrink-0 rounded-full bg-[#ffb400]/20 flex items-center justify-center">
                                 <i class="fa-solid fa-user text-[#ffb400]"></i>
                             </div>
                             <div>
@@ -485,7 +528,8 @@
                     <div data-aos="zoom-in"
                         class="bg-white/5 border border-white/10 backdrop-blur rounded-3xl p-8 hover:border-[#ffb400]/40 transition">
                         <div class="flex items-center gap-4 mb-6">
-                            <div class="w-14 h-14 shrink-0 rounded-full bg-[#ffb400]/20 flex items-center justify-center">
+                            <div
+                                class="w-14 h-14 shrink-0 rounded-full bg-[#ffb400]/20 flex items-center justify-center">
                                 <i class="fa-solid fa-user-gear text-[#ffb400]"></i>
                             </div>
                             <div>
@@ -510,7 +554,8 @@
                     <div data-aos="zoom-in"
                         class="bg-white/5 border border-white/10 backdrop-blur rounded-3xl p-8 hover:border-[#ffb400]/40 transition">
                         <div class="flex items-center gap-4 mb-6">
-                            <div class="w-14 h-14 shrink-0 rounded-full bg-[#ffb400]/20 flex items-center justify-center">
+                            <div
+                                class="w-14 h-14 shrink-0 rounded-full bg-[#ffb400]/20 flex items-center justify-center">
                                 <i class="fa-solid fa-user-check text-[#ffb400]"></i>
                             </div>
                             <div>
@@ -622,10 +667,9 @@
 
 
         <!-- CALL TO ACTION -->
-        <section
-            class="relative  text-white md:py-28 py-16 overflow-hidden">
+        <section class="relative  text-white md:py-28 py-16 overflow-hidden">
             <div class="relative max-w-7xl mx-auto px-6">
-                 <div data-aos="fade-up"
+                <div data-aos="fade-up"
                     class="bg-white/5 border border-white/10 backdrop-blur-2xl rounded-3xl p-14 md:px-14 px-5 text-center">
 
                     <h2 class="text-4xl md:text-5xl font-extrabold leading-tight">
